Fix particle visibility

--- a/src/sass/_app.scss
+++ b/src/sass/_app.scss
@@ -129,8 +129,11 @@ html {
 		text-transform: uppercase;
 		font-size: 2rem;
 	}
-	.container {
+	.lead-container {
+		position: absolute;
+		width: 100%;
 		height: 100vh;
+		padding: 0 1rem;
 		display: flex;
 		justify-content: center;
 		align-items: center;
@@ -138,7 +141,7 @@ html {
 		top: 0;
 	}
 	.tsparticles-canvas-el {
-		opacity: 50%;
+		opacity: 0.3;
 		position: absolute;
 		left: 0;
 		top: 0;
